<resources>
    <string name="app_name">Lemo Mall</string>
    <string name="menu_str">MENU</string>
    <string name="account_str">ACCOUNT</string>
    <string name="basket_str">BASKET</string>
    <string name="orders_str">ORDERS</string>
    <string name="logout_str">LOGOUT</string>
    <string name="clever_mind_str">2023.Clever Mind POB</string>
    <string name="healthy_mall_in_your_hand">Healthy Mall in Your Hand</string>
    <string name="the">THE</string>
    <string name="email_hint_str">EMAIL</string>
    <string name="password_hint_str">PASSWORD</string>
    <string name="forget_pass_str">Forget Password!</string>
    <string name="sign_up_str">Don\'t Have an Account? Join Us Here</string>
    <string name="emptyField_str">Please fill in all field!</string>
    <string name="welcome_str">"Welcome "</string>
    <string name="invalidPass_str">Invalid Email or Password</string>
    <string name="passWeak_str">Password too weak</string>
    <string name="passLengthErrorMessage_str">Password length should be 8</string>
    <string name="send_str">SEND</string>
    <string name="title_of_forget_dialog_str">FORGET PASSWORD</string>
    <string name="emailNotFound_str">This email does not exist</string>
    <string name="check_your_email">Check Your Email To Reset Password</string>
    <string name="sign_up_word_str">SIGN UP</string>
    <string name="full_name_hint_str">FULL NAME</string>
    <string name="phone_hint_str">PHONE NUMBER</string>
    <string name="emailFormatErrorMessage_str">Wrong email format</string>
    <string name="phoneLengthErrorMessage_str">Phone number length should be 10</string>
    <string name="invalidPhone_str">Phone number(must be begin 077 or 078 or 079 )</string>
    <string name="accountExist_str">This account already exists :(</string>
    <string name="cash_str">CASH</string>
    <string name="visa_str">VISA</string>
    <string name="choose_payment">Please choose the payment method.</string>
    <string name="account_word_str">ACCOUNT</string>
    <string name="save_str">SAVE</string>
    <string name="updateInfoSuccessfully_str">Update your info successfully</string>
    <string name="home_word_str">HOME</string>
    <string name="thanks_order_str">Thank You For Your Order\n You Can Check Your Order List Form\n Orders Screen.</string>
    <string name="get_chance_str">GET A CHANCE\n TO WIN A FREE\n COPNOS!</string>
    <string name="our_price_str">Our Paid Copons Prices</string>
    <string name="prices_str">$150 / $100 / $80 / $50\n $30 / $20 / $10 / $5</string>
    <string name="about_str">+ 9 6 2 7 9 5 3 4 7 3 4 1\n J O R D A N - A M M A N\n C l e v e r M i n d P O B I C T</string>
    <string name="save_discount_str">SAVE 20%</string>
    <string name="our_fruits_str">OUR FRUITS</string>
    <string name="summer_fruits_str">SUMMER FRUITS</string>
    <string name="new_fruits_str">NEW FRUITS</string>
    <string name="winter_fruits_str">WINTER FRUITS</string>
    <string name="green_fruits_str">GREEN FRUITS</string>
    <string name="total_str">"Total: "</string>
    <string name="already_zero_str">The number you ordered is already zero</string>
    <string name="address_str">ADDRESS</string>
    <string name="order_now_str">ORDER NOW</string>
    <string name="canceled_str">Canceled</string>
    <string name="empty_address_str">You have to fill in your address</string>
    <string name="add_some_fruit_str">You have to add some fruits first</string>

    <string-array name="fruitTypeNames">

        <item name="0"> SUMMER FRUITS </item>
        <item name="1"> NEW FRUITS </item>
        <item name="2"> GREEN FRUITS </item>
        <item name="3"> WINTER FRUITS </item>

    </string-array>

    <string-array name="fruitNames">

        <item name="0"> Apple </item>
        <item name="1"> Orange </item>
        <item name="2"> Bananas </item>
        <item name="3"> Strawberry </item>
        <item name=""> KIWI </item>
        <item name=""> MELON </item>
        <item name=""> PINEAPPLE </item>
        <item name=""> LEMON </item>

    </string-array>

    <string-array name="fruitPrices">

        <item name="0"> 2 </item>
        <item name="1"> 3 </item>
        <item name="2"> 1.5 </item>
        <item name="3"> 3 </item>
        <item name=""> 5 </item>
        <item name=""> 1 </item>
        <item name=""> 2.5 </item>
        <item name=""> 3.5 </item>

    </string-array>


</resources>