<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_menu"
    tools:context=".ui.MenuDialog">



    <TextView
        android:id="@+id/menu_dialog_header_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_str"
        android:layout_marginTop="2dp"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menu_dialog_account_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:text="@string/account_str"
        android:textAlignment="center"
        android:drawableTop="@drawable/ic_account"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_dialog_header_textview" />

    <TextView
        android:id="@+id/menu_dialog_basket_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:text="@string/basket_str"
        android:textAlignment="center"
        android:drawableTop="@drawable/ic_basket"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_dialog_header_textview" />

    <TextView
        android:id="@+id/menu_dialog_orders_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:text="@string/orders_str"
        android:textAlignment="center"
        android:drawableTop="@drawable/ic_orders"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_dialog_account_textview" />

    <TextView
        android:id="@+id/menu_dialog_logout_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/logout_str"
        android:textAlignment="center"
        android:drawableTop="@drawable/ic_logout"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_dialog_basket_textview" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_dialog_logout_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>