<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    tools:context=".ui.AccountScreen">

    <include
        layout="@layout/base_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_logo_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="456dp"
        android:src="@drawable/ic_logo_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="248dp"
        android:gravity="center"
        android:text="@string/healthy_mall_in_your_hand"
        android:textColor="@color/light_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/account_edittext_full_name"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:background="@drawable/edit_text_shape_account"
        android:hint="@string/full_name_hint_str"
        android:inputType="textPersonName"
        android:letterSpacing="0.1"
        android:padding="6dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.410"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/account_edittext_phone"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:background="@drawable/edit_text_shape_account"
        android:hint="@string/phone_hint_str"
        android:inputType="phone"
        android:letterSpacing="0.1"
        android:padding="6dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.500"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />


    <EditText
        android:id="@+id/account_edittext_email"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:background="@drawable/edit_text_shape_account"
        android:hint="@string/email_hint_str"
        android:inputType="textEmailAddress"
        android:letterSpacing="0.1"
        android:padding="6dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.590"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/account_edittext_password"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:background="@drawable/edit_text_shape_account"
        android:hint="@string/password_hint_str"
        android:inputType="textPassword"
        android:letterSpacing="0.1"
        android:padding="6dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.680"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <RadioGroup
        android:id="@+id/account_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_edittext_password">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:text="@string/cash_str"
            android:theme="@style/Theme.LemoMall2"
            android:textSize="22sp" />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:checked="false"
            android:theme="@style/Theme.LemoMall2"
            android:text="@string/visa_str"
            android:textSize="22sp" />


    </RadioGroup>


    <TextView
        android:id="@+id/account_save_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="44dp"
        android:drawableLeft="@drawable/ic_save"
        android:text="@string/save_str"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_radio_group" />

</androidx.constraintlayout.widget.ConstraintLayout>